correction mobile, populaire passe au dessus d'hebergement

--- a/style.css
+++ b/style.css
@@ -521,6 +521,10 @@ footer {
         margin-right: 30px;
     }
 
+    .row_top {
+        flex-direction: column-reverse;
+    }
+
     .heb_title {
         margin-left: 0px;
     }
@@ -530,7 +534,7 @@ footer {
     }
 
     #populaire_block {
-        background-color: white;
+        background-color: #F2F2F2;
     }
 
     .pop_fig {
@@ -538,6 +542,7 @@ footer {
     }
 
     #hebergement  {
+        background-color: white;
         display: flex;
         flex-direction: column;
         align-items: center;
